--- a/package.json
+++ b/package.json
@@ -12,10 +12,12 @@
   "author": "João Pedro Nogueira",
   "license": "MIT",
   "dependencies": {
+    "dotenv": "^16.0.3",
     "fastify": "^4.12.0",
     "knex": "^2.4.2",
     "sqlite3": "^5.1.4",
-    "typescript": "^4.9.5"
+    "typescript": "^4.9.5",
+    "zod": "^3.20.2"
   },
   "devDependencies": {
     "@rocketseat/eslint-config": "^1.2.0",
