--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "author": "João Pedro Nogueira",
   "license": "MIT",
   "dependencies": {
+    "@fastify/cookie": "^8.3.0",
     "dotenv": "^16.0.3",
     "fastify": "^4.12.0",
     "knex": "^2.4.2",
