--- a/package.json
+++ b/package.json
@@ -22,6 +22,8 @@
     "fastify": "^4.12.0",
     "knex": "^2.4.2",
     "pg": "^8.9.0",
+    "tsup": "^6.6.0",
+    "tsx": "^3.12.3",
     "typescript": "^4.9.5",
     "zod": "^3.20.2"
   },
@@ -32,7 +34,6 @@
     "eslint": "^8.33.0",
     "sqlite3": "^5.1.4",
     "supertest": "^6.3.3",
-    "tsx": "^3.12.3",
     "vitest": "^0.28.4"
   }
 }
